# public/swagger.json
@@ -7,7 +7,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"ReviewDTO": {
+			"reviewDTO": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -34,7 +34,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"AddReviewDTO": {
+			"addReviewDTO": {
 				"properties": {
 					"review_text": {
 						"type": "string"
@@ -56,7 +56,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"UpdateReviewDTO": {
+			"updateReviewDTO": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -83,7 +83,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"ConsoleDTO": {
+			"consoleDTO": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -103,7 +103,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"GameDTO": {
+			"gameDTO": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -113,7 +113,7 @@
 						"type": "string"
 					},
 					"console": {
-						"$ref": "#/components/schemas/ConsoleDTO"
+						"$ref": "#/components/schemas/consoleDTO"
 					}
 				},
 				"required": [
@@ -122,7 +122,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"AddGame": {
+			"addGameDTO": {
 				"properties": {
 					"title": {
 						"type": "string"
@@ -139,7 +139,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"EditGame": {
+			"editGameDTO": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -155,6 +155,22 @@
 				},
 				"required": [
 					"id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"addConsoleDTO": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"manufacturer": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"manufacturer"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -181,7 +197,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/ReviewDTO"
+										"$ref": "#/components/schemas/reviewDTO"
 									},
 									"type": "array"
 								}
@@ -239,7 +255,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/ReviewDTO"
+										"$ref": "#/components/schemas/reviewDTO"
 									},
 									"type": "array"
 								}
@@ -261,7 +277,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ReviewDTO"
+									"$ref": "#/components/schemas/reviewDTO"
 								}
 							}
 						}
@@ -277,7 +293,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/AddReviewDTO"
+								"$ref": "#/components/schemas/addReviewDTO"
 							}
 						}
 					}
@@ -291,7 +307,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ReviewDTO"
+									"$ref": "#/components/schemas/reviewDTO"
 								}
 							}
 						}
@@ -307,7 +323,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/UpdateReviewDTO"
+								"$ref": "#/components/schemas/updateReviewDTO"
 							}
 						}
 					}
@@ -324,7 +340,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/GameDTO"
+										"$ref": "#/components/schemas/gameDTO"
 									},
 									"type": "array"
 								}
@@ -346,7 +362,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/GameDTO"
+									"$ref": "#/components/schemas/gameDTO"
 								}
 							}
 						}
@@ -362,7 +378,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/AddGame"
+								"$ref": "#/components/schemas/addGameDTO"
 							}
 						}
 					}
@@ -378,7 +394,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/GameDTO"
+									"$ref": "#/components/schemas/gameDTO"
 								}
 							}
 						}
@@ -408,7 +424,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/GameDTO"
+									"$ref": "#/components/schemas/gameDTO"
 								}
 							}
 						}
@@ -424,7 +440,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/EditGame"
+								"$ref": "#/components/schemas/editGameDTO"
 							}
 						}
 					}
@@ -464,7 +480,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/ReviewDTO"
+										"$ref": "#/components/schemas/reviewDTO"
 									},
 									"type": "array"
 								}
@@ -499,7 +515,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/ConsoleDTO"
+										"$ref": "#/components/schemas/consoleDTO"
 									},
 									"type": "array"
 								}
@@ -521,7 +537,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ConsoleDTO"
+									"$ref": "#/components/schemas/consoleDTO"
 								}
 							}
 						}
@@ -537,7 +553,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ConsoleDTO"
+								"$ref": "#/components/schemas/addConsoleDTO"
 							}
 						}
 					}
@@ -553,7 +569,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ConsoleDTO"
+									"$ref": "#/components/schemas/consoleDTO"
 								}
 							}
 						}
@@ -608,7 +624,7 @@
 								"schema": {
 									"allOf": [
 										{
-											"$ref": "#/components/schemas/ConsoleDTO"
+											"$ref": "#/components/schemas/consoleDTO"
 										}
 									],
 									"nullable": true
@@ -637,7 +653,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ConsoleDTO"
+								"$ref": "#/components/schemas/consoleDTO"
 							}
 						}
 					}
@@ -654,7 +670,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/GameDTO"
+										"$ref": "#/components/schemas/gameDTO"
 									},
 									"type": "array"
 								}
