# src/controllers/game.controller.ts
@@ -1,24 +1,24 @@
 import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags} from "tsoa";
-import {AddGame, EditGame, GameDTO} from "../dto/game.dto";
+import {addGameDTO, editGameDTO, gameDTO} from "../dto/gameDTO";
 import { gameService } from "../services/game.service";
-import {ReviewDTO} from "../dto/review.dto";
+import {reviewDTO} from "../dto/reviewDTO";
 import {ReviewService} from "../services/review.service";
 
 @Route("games")
 @Tags("Games")
 export class GameController extends Controller {
   @Get("/")
-  public async getAllGames(): Promise<GameDTO[]> {
+  public async getAllGames(): Promise<gameDTO[]> {
     return gameService.getAllGames();
   }
 
   @Get("{id}")
-  public async getGame(id: number): Promise<GameDTO> {
+  public async getGame(id: number): Promise<gameDTO> {
     return gameService.getGame(id);
   }
 
   @Post("/")
-  public async addGame(@Body() requestBody: AddGame): Promise<GameDTO> {
+  public async addGame(@Body() requestBody: addGameDTO): Promise<gameDTO> {
     const addedGame = await gameService.addGame(requestBody);
     if (!addedGame) {
       throw new Error("Failed to add game");
@@ -27,7 +27,7 @@ export class GameController extends Controller {
   }
 
   @Patch("{id}")
-    public async updateGame(@Body() requestBody: EditGame): Promise<GameDTO> {
+    public async updateGame(@Body() requestBody: editGameDTO): Promise<gameDTO> {
         return gameService.updateGame(requestBody);
     }
 
@@ -36,7 +36,7 @@ export class GameController extends Controller {
     await gameService.deleteGame(id);
   }
   @Get("{id}/reviews")
-  public async getReviewsByGameId(@Path() id: number): Promise<ReviewDTO[]> {
+  public async getReviewsByGameId(@Path() id: number): Promise<reviewDTO[]> {
     return ReviewService.getReviewsByGameId(id);
   }
 }
