# src/dto/console.dto.ts
@@ -1,5 +1,0 @@
-export interface ConsoleDTO {
-  id?: number;
-  name: string;
-  manufacturer: string;
-}
