# src/dto/consoleDTO.ts
@@ -1,0 +1,10 @@
+export interface consoleDTO {
+  id?: number;
+  name: string;
+  manufacturer: string;
+}
+
+export interface addConsoleDTO {
+  name: string;
+  manufacturer: string;
+}
