# src/dto/reviewDTO.ts
@@ -1,17 +1,17 @@
-export interface ReviewDTO {
+export interface reviewDTO {
     id: number;
     review_text: string;
     rating: number;
     game_id: number;
 }
 
-export interface AddReviewDTO {
+export interface addReviewDTO {
     review_text: string;
     rating: number;
     gameId: number;
 }
 
-export interface UpdateReviewDTO {
+export interface updateReviewDTO {
     id: number;
     review: string;
     rating: number;
